--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,6 +26,9 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
+    if (project.android.hasProperty("namespace")) {
+        namespace 'appmire.be.flutterjailbreakdetection'
+    }
     compileSdkVersion 33
 
     sourceSets {
